.bonus/confs/apps/cd/dev/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dev-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dev-app

  template:

    metadata:
      labels:
        app: dev-app

    spec:

      nodeSelector:
        workload: cd

      containers:

        - name: dev-app
          image: wil42/playground:v1

          ports:
            - containerPort: 8888
