.bonus/confs/apps/cd/dev/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dev-app

spec:

  ingressClassName: traefik

  rules:

    - host: dev.iot.test

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: dev-app-service

                port:
                  number: 80
